--- a/math-practice.html
+++ b/math-practice.html
@@ -281,7 +281,8 @@
         <!-- Home Screen -->
         <div id="homeScreen" class="screen active">
             <h1>🎓 Math Strong</h1>
-            <h2>What would you like to get better at?</h2>
+            <h2>Amazing, you are determined to get better!</h2>
+            <h2>What do you want to practice?</h2>
             <div class="button-group">
                 <button class="btn btn-primary" onclick="selectMode('addition')">
                     ➕ Addition
@@ -299,7 +300,7 @@
             <div style="margin-top: 30px; padding: 20px; background: #f9f9f9; border-radius: 10px;">
                 <label style="display: flex; align-items: center; font-size: 1.1em; cursor: pointer;">
                     <input type="checkbox" id="negativeCheckbox" style="width: 20px; height: 20px; margin-right: 10px; cursor: pointer;">
-                    <span>Include negative numbers</span>
+                    <span>Include negative numbers. I'm ready!</span>
                 </label>
             </div>
         </div>
