--- a/math-practice.html
+++ b/math-practice.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>Math Strong - Get better at basic math.</title>
     <style>
         * {
@@ -19,6 +19,7 @@
             justify-content: center;
             align-items: center;
             padding: 20px;
+            touch-action: manipulation;
         }
 
         .container {
@@ -158,6 +159,7 @@
             font-weight: bold;
             transition: all 0.2s;
             user-select: none;
+            touch-action: manipulation;
         }
 
         .key:hover {
